content/docs/0.12.x/reference/cli/commands/keptn.md
---
date: "2022-01-31T09:42:04Z"
title: "keptn"
slug: keptn
---
## keptn

The CLI for using Keptn

### Synopsis

The CLI allows interaction with a Keptn installation to manage Keptn, to trigger workflows, and to get details.
	

### Options

```
      --config-file string   Specify custom Keptn Config file path (default: ~/.keptn/config)
  -h, --help                 help
      --mock                 Disables communication to a Keptn endpoint
  -n, --namespace string     Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet                Suppresses debug and info messages
  -v, --verbose              Enables verbose logging to print debug messages
  -y, --yes                  Assume yes for all user prompts
```

### SEE ALSO

* [keptn abort](../keptn_abort/)	 - Aborts the execution of a sequence
* [keptn add-resource](../keptn_add-resource/)	 - Adds a local resource to a service within your project in the specified stage
* [keptn auth](../keptn_auth/)	 - Authenticates the Keptn CLI against a Keptn installation
* [keptn completion](../keptn_completion/)	 - Generate completion script
* [keptn configure](../keptn_configure/)	 - Configures one of the specified parts of Keptn
* [keptn create](../keptn_create/)	 - Creates a new project or service
* [keptn delete](../keptn_delete/)	 - Deletes a project
* [keptn generate](../keptn_generate/)	 - Generates the markdown CLI documentation or a support archive
* [keptn get](../keptn_get/)	 - Displays an event or Keptn entities such as project, stage, or service
* [keptn install](../keptn_install/)	 - Installs Keptn on a Kubernetes cluster
* [keptn pause](../keptn_pause/)	 - Pauses the execution of a sequence
* [keptn resume](../keptn_resume/)	 - Resumes the execution of a sequence
* [keptn send](../keptn_send/)	 - Sends an event to Keptn
* [keptn set](../keptn_set/)	 - Sets flags of the CLI configuration
* [keptn status](../keptn_status/)	 - Checks the status of the CLI
* [keptn trigger](../keptn_trigger/)	 - Triggers the execution of an action in keptn
* [keptn uninstall](../keptn_uninstall/)	 - Uninstalls Keptn from a Kubernetes cluster
* [keptn update](../keptn_update/)	 - Updates an existing Keptn project
* [keptn upgrade](../keptn_upgrade/)	 - Upgrades Keptn on a Kubernetes cluster.
* [keptn version](../keptn_version/)	 - Shows the version of Keptn and Keptn CLI

###### Auto generated by spf13/cobra on 31-Jan-2022
